# TPT-payroll-api

./: .env example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  cli.py  pyproject.toml  requirements.txt  script.sh  start.sh
alembic/: env.py
alembic/versions/: 03130c35c75e_create_departments_table.py  056510f6b412_remove_company_id_from_schedule_details.py  076c14c8ef75_add_is_offboard_for_employee.py  0c37e9146b96_update_user_and_company_foreign_key.py  10be4216259b_create_positions_table.py  1874d0773bf8_refactor_schedule_details_table.py  1ba67378bf85_refactor_schedule_shift_association_.py  1f09833839ed_first_version.py  23f83c7b4b3e_first_version.py  27fc98ea095e_add_schedule_details_table.py  2ecde9567dd3_update_limit_digits_of_cccd_and_mst.py  40f2ba24035e_delete_schedule_details_table.py  432264609673_remove_payment_method_from_contract_.py  4ed5c224a963_add_shift_per_day_field_for_schedules_.py  5cd3ab0b4abc_update_model.py  60567c73b757_add_company_back_populates.py  696650d1d25a_update_model.py  6efa3f2d2783_create_employees_table.py  726f3020172f_contract_update.py  7382c93ddec2_update_contract_history.py  76fe5d185772_refactor_id_field_for_schedule_details_.py  7862e88fec25_init.py  787e8021c5a0_update_schedules_table.py  7891d7f7d302_delete_schedule_details_table.py  79e9538b3349_update_dependant_table.py  7a4c0ba90119_add_companies_table.py  7c9afa4754ae_update_gì_đó.py  7e1c7f772d36_first_version.py  (+27 more)
app/: main.py  test.py
payroll/: api.py  cli.py  config.py  main.py  models.py  utils.py  utils_functions.py  utils_models.py
(+229 files in other folders)
