[tool.poetry]
name = "payroll"
version = "0.1.0"
description = ""
authors = ["khongtrunght <khongtrunght@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
python-jose = "^3.3.0"
pydantic = "^2.7.2"
bcrypt = "^4.1.3"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}
sqlalchemy-utils = "^0.41.2"
click = "^8.1.7"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
openpyxl = "^3.1.3"
uvicorn = "^0.30.1"
numpy = "^2.0.1"
boto3 = "^1.35.6"
docx = "^0.2.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.1"

[tool.ruff]
ignore = ["F821"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
